[package]
name = "reinterpret"
version = "0.1.2"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Low level utility functions to reinterpret arrays of data"

homepage = "https://github.com/elrnv/reinterpret"
repository = "https://github.com/elrnv/reinterpret"
readme = "README.md"

keywords = ["reinterpret", "cast"]

[badges]
travis-ci = { repository = "elrnv/reinterpret", branch = "master" }
